Remove perf and proto code; add UDP tests and fix message loss on close (#255)